new geodesics unfolder

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dodecahedron-unfolder",
+  "name": "dodecahedron-geodesic-unfolder",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,8 +9,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.17",
-    "autoprefixer": "^10.4.22",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
